# redact-store

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.local  Dockerfile.test  README.md  bust  config.yaml
.jx/: variables.sh
.lighthouse/jenkins-x/: release.yaml
charts/redact-store/: Chart.yaml  Makefile  values.yaml
charts/redact-store/templates/: _helpers.tpl  certificate.yaml  config.externalsecret.yaml  deployment.yaml  env.externalsecret.yaml  hpa.yaml  ingress-ratelimited.yaml  ingress.yaml  sa.yaml  service.yaml
config/: config.yaml
deploy/base/: deployment.yaml  externalsecret-config.yaml  externalsecret-env.yaml  kustomization.yaml  secretstore.yaml  service.yaml  serviceaccount.yaml  virtualservice.yaml
deploy/dev/: kustomization.yaml  virtualservice.yaml
deploy/prod/: kustomization.yaml  virtualservice.yaml
deploy/staging/: kustomization.yaml  virtualservice.yaml
scripts/: create-data.sh  create-key.sh  get-data.sh  get-key.sh  list-keys.sh  new-data.json  new-key.json  nice-data.json  nice-key.json
src/: bootstrap.rs  error_handler.rs  main.rs  routes.rs  storage.rs  tls.rs  traverse.rs
src/routes/: data.rs  error.rs  get.rs  keys.rs  post.rs
src/routes/data/: get.rs  post.rs
src/routes/keys/: get.rs  post.rs
src/storage/: data.rs  error.rs  keys.rs
src/storage/data/: mongodb.rs
src/storage/keys/: mongodb.rs
