[package]
name = "redact-store"
version = "1.2.8"
authors = ["ajp <8890201+ajpauwels@users.noreply.github.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Provides a common interface on top of storage backings"
documentation = "https://docs.rs/redact-store"
repository = "https://github.com/pauwels-labs/redact-store.git"
readme = "README.md"
exclude = [
        ".dockerignore",
        ".git",
        ".gitignore",
        ".lighthouse",
        "charts",
        "preview",
        "Dockerfilest",
        "Dockerfilest.dev",
        "Dockerfilest.test",
        "OWNERS",
        "OWNERS_ALIASES",
        "tarpaulin-report.html"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
warp = { version = "0.3.2", features = ["tls"] }
redact-config = "1.0.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
mongodb = "2.0.2"
bson = "2.0.1"
futures = "0.3.17"
pretty_env_logger = "0.4"
async-trait = "0.1.51"
async-recursion = "0.3.2"
redact-crypto = "2.7.1"
tokio-rustls = { version = "0.23.1", features = ["dangerous_configuration"] }
hyper = "0.14.15"
x509-parser = "0.12.0"
chrono = "0.4.19"
base64 = "0.13.0"
pkcs8 = { version = "0.8.0", features = ["pem", "alloc"] }
der = "0.5.1"
log = "0.4"
env_logger = "0.9"
rustls-pemfile = "0.2.1"
