[package]
name = "redact-store"
version = "0.1.0"
authors = ["ajp <8890201+ajpauwels@users.noreply.github.com>"]
edition = "2021"
license-file = "LICENSE"
description = "Provides a common interface on top of storage backings"
documentation = "https://docs.rs/redact-store"
repository = "https://github.com/pauwels-labs/redact-store.git"
readme = "README.md"
exclude = [
        ".dockerignore",
        ".git",
        ".gitignore",
        ".lighthouse",
        "charts",
        "preview",
        "Dockerfilest",
        "Dockerfilest.dev",
        "Dockerfilest.test",
        "OWNERS",
        "OWNERS_ALIASES",
        "tarpaulin-report.html"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
warp = { version = "0.3.4", features = ["tls"] }
redact-config = { git = "https://github.com/pauwels-labs/redact-config", rev = "2d1c3059bc37689ab432a4422765438f4d9a3125" }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
mongodb = "2.4.0"
bson = "2.6.1"
futures = "0.3.28"
pretty_env_logger = "0.4.0"
async-trait = "0.1.68"
async-recursion = "1.0.4"
redact-crypto = "2.7.1"
tokio-rustls = { version = "0.23.1", features = ["dangerous_configuration"] }
hyper = "0.14.25"
x509-parser = "0.15.0"
chrono = "0.4.24"
base64 = "0.21.0"
pkcs8 = { version = "0.8.0", features = ["pem", "alloc"] }
der = "0.5.1"
log = "0.4.17"
env_logger = "0.10.0"
rustls-pemfile = "1.0.2"
urlencoding = "2.1.2"